--- a/divination-game/package.json
+++ b/divination-game/package.json
@@ -14,6 +14,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.1",
+    "react-share": "^5.1.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
