--- a/divination-game/package.json
+++ b/divination-game/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://tristaraccessory.github.io/TristarDivinationGame/",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
