修正: 修正路由錯誤

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -38,7 +38,9 @@ jobs:
         working-directory: divination-game/
 
       - name: Setup 404 page
-        run: cp dist/index.html dist/404.html
+        run: |
+          cp dist/index.html dist/404.html
+          cp dist/index.html dist/share/index.html
         working-directory: divination-game/
 
       - name: Setup Pages
