修正: 修正路由錯誤

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -40,6 +40,7 @@ jobs:
       - name: Setup 404 page
         run: |
           cp dist/index.html dist/404.html
+          mkdir dist/share
           cp dist/index.html dist/share/index.html
         working-directory: divination-game/
 
